--- a/style.css
+++ b/style.css
@@ -99,6 +99,11 @@ header nav ul li a:hover {
     max-width: 300px;
     border-radius: 5px;
     margin-right: 20px;
+    transition: transform 0.3s ease; /* Add transition for smooth animation */
+}
+
+.project-image:hover {
+    transform: scale(1.1); /* Apply the zoom-in effect on hover */
 }
 
 .separator {
@@ -158,7 +163,62 @@ header nav ul li a:hover {
     vertical-align: middle;
     font-size: 35px;
 }
+.social-icons,
+    .profile img {
+        margin-right: 10px;
+        font-size: 35px; /* Set the initial font size */
+        line-height: 1; /* Ensure proper vertical alignment */
+        display: inline-block; /* Adjust display to avoid layout issues */
+        transition: transform 0.3s ease; /* Add the transition property for smooth animation */
+    }
 
-.social-icons {
-    margin-right: 10px;
+    .social-icons:hover,
+    .profile img:hover {
+        transform: scale(1.2); /* Increase the scale on hover */
+    }
+
+
+/* Mobile styles */
+@media screen and (max-width: 600px) {
+    .profile img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .profile h1 {
+        font-size: 18px;
+    }
+
+    .project-content {
+        flex-direction: column;
+    }
+
+    .project-image {
+        max-width: 100%;
+    }
+
+    .separator {
+        display: none;
+    }
+
+    .horizontal-separator {
+        margin: 10px 0;
+    }
+
+    .project-text-right,
+    .project-text {
+        text-align: center;
+    }
+
+    .project-text-right h2,
+    .project-text h2 {
+        font-size: 20px;
+    }
+
+    
+
+    .project-text-right p,
+    .project-text p {
+        font-size: 16px;
+    }
 }
